--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,8 +17,8 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: "gabrielsh38"
+          password: "dckr_pat_L1Dayp-igsHW9oRhlP8NKfkHaf0"
 
     - name: Build e Push 
       run: |
