--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,15 +14,17 @@ jobs:
     - uses: actions/checkout@v4
     
   
-    - name: Login to Docker Hub
+    - name: Login to Docker HUB
       uses: docker/login-action@v3
       with:
           username: "gabrielsh38"
           password: "dckr_pat_L1Dayp-igsHW9oRhlP8NKfkHaf0"
 
-    - name: Build e Push 
+    - name: Build  
       run: |
-        docker build . --file Dockerfile --tag ${{ secrets.DOCKER_CONTAINER_REGISTRY }}/apicontagem:latest
-        docker tag ${{ secrets.DOCKER_CONTAINER_REGISTRY }}/apicontagem:latest ${{ secrets.DOCKER_CONTAINER_REGISTRY }}/apicontagem:$(date +%s)
-        docker push ${{ secrets.DOCKER_CONTAINER_REGISTRY }}/apicontagem
+        docker build ./prolor/Application/api/ -t gabrielsh38/dockerbuild:latest       
 
+    - name: Push Docker HUB  
+      run: |
+        docker tag gabrielsh38/dockerbuild:latest gabrielsh38/dockerbuild:latest
+        docker push gabrielsh38/dockerbuild:latest  
